@@ -9,13 +9,13 @@ tests = {'test_netcdf_constant',...
          'test_netcdf_create'...
          'test_netcdf_low_level_interface'...
          'test_netcdf_unlim',...         
-         'test_netcdf_datatypes'...
-         'test_netcdf_scalar_variable'...
-         'test_netcdf_attributes'...
-         'test_netcdf_high_level_interface'...
-         'test_netcdf_ncwriteschema'...
-         'test_netcdf_ncwriteschema_unlim'...
-         'test_netcdf_ncwriteschema_chunking'...
+         'test_netcdf_datatypes',...
+         'test_netcdf_scalar_variable',...
+         'test_netcdf_attributes',...
+         'test_netcdf_high_level_interface',...
+         'test_netcdf_ncwriteschema',...
+         'test_netcdf_ncwriteschema_unlim',...
+         'test_netcdf_ncwriteschema_chunking',...
          'test_netcdf_ncwriteschema_group'...
         };
 
