@@ -1,3 +1,8 @@
+Summary of important user-visible changes for netcdf 1.0.9:
+-------------------------------------------------------------------
+
+ ** Fix bug #47014: writing NaNs
+
 Summary of important user-visible changes for netcdf 1.0.8:
 -------------------------------------------------------------------
 
